--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -22,7 +22,7 @@
             <thead>
             <tr>
                 <th scope="col">#</th>
-                <th scope="col">Name</th>
+                <th scope="col">Nickname</th>
                 <th scope="col">Action</th>
             </tr>
             </thead>
@@ -72,8 +72,8 @@
             <div class="modal-body">
                 <form id="addMemberForm" action="/members" method="post">
                     <div class="form-group">
-                        <label for="name" class="col-form-label">Name:</label>
-                        <input type="text" class="form-control" id="name">
+                        <label for="nickname" class="col-form-label">Nickname:</label>
+                        <input type="text" class="form-control" id="nickname">
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary">Add Member</button>
@@ -84,8 +84,11 @@
     </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+<!--<script src="https://code.jquery.com/jquery-3.3.1.min.js"-->
+<!--        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"-->
+<!--        crossorigin="anonymous"></script>-->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
@@ -93,31 +96,28 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+<!--<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>-->
 <script>
     /* attach a submit handler to the form */
-    $("#addMemberForm").submit(function (event) {
+    $("#addMemberForm").submit(function (e) {
+
+        e.preventDefault();
 
         /* get the action attribute from the <form action=""> element */
         var form = $("#addMemberForm");
         var url = form.attr('action');
 
-        console.log(url)
-        console.log('#name'.val())
+        console.log(url);
+        console.log($('#nickname').val());
 
-        console.log("This is Log Before call ajax")
+        console.log("This is Log Before call ajax");
 
         $.ajax({
             url: url,
-            // contentType: 'application/json; charset=utf-8',
-            headers: {
-                'Accept': 'application/json',
-                'Content-Type': 'application/json'
-            },
+            contentType: 'application/json; charset=utf-8',
             type: "POST",
-            dataType: "json",
             data: JSON.stringify({
-                name: $('#name').val()
+                nickname: $('#nickname').val()
             }),
             success: function (data) {
                 // Ajax call completed successfully
